Eliminated text relating to future email enhancements from the email modal window.

--- a/themes/phoenix/templates/Auth/ChoiceAuth/login.phtml
+++ b/themes/phoenix/templates/Auth/ChoiceAuth/login.phtml
@@ -10,7 +10,4 @@
 </div>
 <div class="clearer"></div>
 <? $this->auth()->getManager()->setAuthMethod('ChoiceAuth') ?>
-<div id="login-txt" class="col-sm-12">
-    <p class="">Email services will be expanded for the official launch this summer.<br />
-    Forthcoming email features will include the ability to send multiple records simultaneously.</p>
-</div>
+<div id="login-txt" class="col-sm-12"></div>
