Eliminated the status display on results pages for analyitic records and journals.

--- a/themes/phoenix/templates/RecordDriver/SolrDefault/result-list.phtml
+++ b/themes/phoenix/templates/RecordDriver/SolrDefault/result-list.phtml
@@ -183,7 +183,7 @@
       <? endif; ?>
       <?=$this->record($this->driver)->getPreviews()?>
     </div>
-    <div class="col-xs-0 right text-right hidden-print hidden-xs">
+    <div class="col-xs-0 right text-right hidden-print hidden-xs format-list">
       <? /* Display qrcode if appropriate: */ ?>
       <? if ($QRCode = $this->record($this->driver)->getQRCode("results")): ?>
         <?
