Got rid of links under "About the Library Catalog" on the search/browse homepages.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -320,32 +320,27 @@ div#searchForm p {
 }
 #about-beta {
     clear: left; 
-    color:#787878; 
+    color:#787878;
     display: block; 
-    padding-left: 20px;
-    margin-top: -15px;
+    margin-top: -13px;
     line-height: @line-height-computed - .3;
     a {
         color: inherit;
-    }
-    a:after {
-        font-size: 13px;
     }
     li { 
         list-style-type: square;
     }
     p {
         font-family: ProximaNova-Regular;
-        font-size: 20px; 
-        margin-bottom: 2px; 
-        margin-top: 25px;
+        font-size: @font-size-base; 
+        margin-bottom: 50px; 
+        padding: 0 5px;
     }
-    ul { 
+    /*ul { 
         font-family: ProximaNova-Regular; 
         font-size: 16px; 
         margin-bottom: 50px; 
-        padding-left: 20px;
-    }
+    }*/
 }
 #advSearchForm.advancedSearch {
     .well {
