Bug # 16327. Updated link to VuFind video.

--- a/themes/phoenix/templates/search/advanced/layout.phtml
+++ b/themes/phoenix/templates/search/advanced/layout.phtml
@@ -55,7 +55,7 @@
   <li style="position: relative; top: 0px;" class="active"><a data-toggle="tab" href="#advSearch">Keyword</a></li>
   <li role="presentation"><a data-toggle="tab" href="#alphaBrowse">Begins With</a></li>
   <li class="hidden-xs which-search-links">
-    <a href="#" id="searchtabinfolink" data-original-title="">Which one? <i class="fa fa-lg fa-info-circle"></i></a> <a href="https://www.youtube.com/watch?v=I4kOECCepew">Video</a>
+    <a href="#" id="searchtabinfolink" data-original-title="">Which one? <i class="fa fa-lg fa-info-circle"></i></a> <a href="https://youtu.be/RCgeTlgaipc">Video</a>
   </li>
 </ul>
 
