Styled renewal buttons, turned off renewal buttons in My Account, added the static link to the Knowledge Tracker renewal form.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -1118,6 +1118,9 @@ table.alphabrowse {
 .login-toggle-content {
     display: none;
 }
+#renewals > .toolbar {
+    margin-bottom: 13px;
+} 
 
 /*Sidebar*/
 /* JEJ changed on 1/29/2015.
