Bug # 16283. Summary holdings with long lines now display correctly.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -788,7 +788,7 @@ div[resource="#record"] .table > tbody > tr:first-child > td {
     color: @gray;
 }
 tr[typeof="Offer"] th,
-.holdings-table th {
+#holdings-tab .holdings-table th {
     //max-width: 175px;
     width: 155px;
 }
