Bug # 16337. 780 w/ second indicator 7 now displays as "separated from".

--- a/themes/phoenix/templates/Helpers/MarcFields/780.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/780.phtml
@@ -21,7 +21,7 @@
               $subLabel = '<span class="subLabel">Absorbed in part</span>';
    }
    elseif($data['indicator2'] == 7) {
-              $subLabel = '<span class="subLabel">Absorbed in part</span>';
+              $subLabel = '<span class="subLabel">Separated from</span>';
    }  
 
    echo $subLabel . ' '. implode(' ', $data['subfieldData']).'<br/>';
