--- a/themes/phoenix/templates/myresearch/fines.phtml
+++ b/themes/phoenix/templates/myresearch/fines.phtml
@@ -14,7 +14,8 @@
     <thead>
     <tr>
       <th><?=$this->transEsc('Title')?></th>
-      <th><?=$this->transEsc('Checked Out')?></th>
+      <th><?=$this->transEsc('Bill Date')?></th>
+      <th><?=$this->transEsc('Check Out Date')?></th>
       <th><?=$this->transEsc('Due Date')?></th>
       <th><?=$this->transEsc('Fine')?></th>
       <th><?=$this->transEsc('Fee')?></th>
@@ -24,6 +25,7 @@
     <tbody>
     <? $totalDue = 0; ?>
     <? foreach ($this->fines as $record): ?>
+      <? if ($record['balance'] == 0): continue; endif; ?>
       <tr>
         <td>
           <? if (empty($record['title'])): ?>
@@ -34,6 +36,7 @@
             <a href="<?=$this->recordLink()->getUrl($record['driver'])?>"><?=$this->escapeHtml(trim($record['title'], '/:'))?></a>
           <? endif; ?>
         </td>
+        <td><?=isset($record['billdate']) ?  $this->escapeHtml($record['billdate']) : ''?></td>
         <td><?=isset($record['checkout']) ? $this->escapeHtml($record['checkout']) : ''?></td>
         <td><?=isset($record['duedate']) ? $this->escapeHtml($record['duedate']) : ''?></td>
         <td><?=isset($record['fine']) ? $this->escapeHtml($record['fine']) : ''?></td>
