--- a/themes/phoenix/templates/Helpers/MarcFields/author.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/author.phtml
@@ -2,9 +2,10 @@
 <? /*Display a link and the vernacular if there's data*/
    if(isset($data['subfieldData'])):
        $displayUrl = implode(' ', $data['subfieldData']);
+       error_log($displayUrl);
        $link = $this->getAuthorBrowseLink($data['subfieldData']);
 ?>
-       <a href="<?='/vufind/alphabrowse'.'/Home?source=author&from='.urlencode(strip_tags(trim($link, ' ')))?>"><?=$displayUrl ?></a><br/>
+       <a href="<?='/vufind/alphabrowse'.'/Home?source=author&amp;from='.urlencode(strip_tags(trim($link, ' ')))?>"><?=$displayUrl ?></a><br/>
        <? if (!empty($data['vernacularData'])) :
            echo implode(' ', $data['vernacularData']);?><br />
        <? endif; ?>
