--- a/themes/phoenix/templates/RecordDriver/AbstractBase/previewlink.phtml
+++ b/themes/phoenix/templates/RecordDriver/AbstractBase/previewlink.phtml
@@ -18,7 +18,7 @@
                     $linkClass = 'previewGBS';
                     $icon = '<i class="fa fa-google"></i>';
                     $text = 'Google Books ';
-                    $tooltip = '<div class="arrow-left"></div><span><img src="https://www.google.com/intl/' . $this->layout()->userLang . '/googlebooks/images/gbs_preview_button1.png" /> </span>';
+                    $tooltip = '<div class="arrow-left"></div><span><img src="https://www.google.com/intl/' . $this->layout()->userLang . '/googlebooks/images/gbs_preview_button1.png" alt="' . $this->transEsc('Preview') . '"/> </span>';
                     break;
                 case 'openlibrary':
                     $name = 'Open Library';
