--- a/themes/phoenix/templates/header.phtml
+++ b/themes/phoenix/templates/header.phtml
@@ -18,8 +18,8 @@
     <span class="sr-only">Toggle navigation</span>
     <i class="fa fa-bars fa-lg"></i>
   </button>
-  <a role="logo" class="navbar-brand hidden-md hidden-sm hidden-xs" href="<?=$this->url('home')?>">The University of Chicago Library Catalog</a>
-  <a role="logo" class="navbar-brand hidden-lg" href="<?=$this->url('home')?>">Library <span class="tagline">Catalog</span></a>
+  <a role="button" class="navbar-brand hidden-md hidden-sm hidden-xs" href="<?=$this->url('home')?>">The University of Chicago Library Catalog</a>
+  <a role="button" class="navbar-brand hidden-lg" href="<?=$this->url('home')?>">Library <span class="tagline">Catalog</span></a>
 </div>
 <? if ($this->layout()->searchbox !== false): ?>
   <section class="visible-lg">
@@ -32,13 +32,13 @@
 <? endif; ?>
 <? if (!isset($this->layout()->renderingError)): ?>
   <div class="collapse navbar-collapse" id="header-collapse">
-    <ul class="nav navbar-nav navbar-left" role="navigation">
+    <ul class="nav navbar-nav navbar-left" role="menu">
       <? $currentUrl = $_SERVER['SCRIPT_URI'] . '?' . $_SERVER['QUERY_STRING'];?>
       <? if ($this->knowledgeTracker()->tabEnabled()): ?>
         <li><a id="knowledgeTrackerLink" class="modal-link" href="<?=$this->url('feedback-knowledgetracker') ?>"><i class="fa fa-envelope"></i> <?=$this->transEsc("Feedback")?></a></li>
       <? endif; ?>
     </ul>
-    <ul role="navigation" class="nav navbar-nav navbar-right">
+    <ul role="menu" class="nav navbar-nav navbar-right">
       <? if ($this->feedback()->tabEnabled()): ?>
         <li>
           <a id="feedbackLink" class="modal-link" href="<?=$this->url('feedback-home') ?>"><i class="fa fa-envelope"></i> <?=$this->transEsc("Feedback")?></a>
