--- a/themes/phoenix/templates/layout/layout.phtml
+++ b/themes/phoenix/templates/layout/layout.phtml
@@ -88,12 +88,13 @@
         <?=$this->render('header.phtml')?>
       </div>
       <div class="container">
-        <? if ($this->layout()->searchbox != false): ?>
-          <nav class="nav searchbox hidden-lg hidden-print">
-            <?=$this->render('search/searchbox.phtml')?>
-            <?=$this->layout()->searchbox ?>
-          </nav>
-        <? endif; ?>
+        <? //Commented out to fix validation errors - brad 
+           //if ($this->layout()->searchbox != false): ?>
+          <!--<nav class="nav searchbox hidden-lg hidden-print">
+            <?//=$this->render('search/searchbox.phtml')?>
+            <?//=$this->layout()->searchbox ?>
+          </nav>-->
+        <? //endif; ?>
         <? if((!isset($this->layout()->showBreadcrumbs) || $this->layout()->showBreadcrumbs == true)
           && !empty($this->layout()->breadcrumbs)
           && $this->layout()->breadcrumbs !== false
@@ -138,7 +139,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 id="modalTitle" class="modal-title"></h4>
+            <h4 id="modalTitle" class="modal-title">&nbsp;</h4>
           </div>
           <div class="modal-body"><?=$this->transEsc('Loading') ?>...</div>
         </div>
