Fixed undefined variable notice in previewlink.phtml

--- a/themes/phoenix/templates/RecordDriver/AbstractBase/previewlink.phtml
+++ b/themes/phoenix/templates/RecordDriver/AbstractBase/previewlink.phtml
@@ -42,7 +42,7 @@
                     break;
                 }
                 if ($name) {
-                    //$title = $this->transEsc('Preview from') . ' ' . $name;
+                    $title = '';
                     $html .= '<div class="' . $divClass .'">'
                         . '<a title="' . $title . '" class="text-success eLink hidden tool ' . $linkClass . ' ' . $idClasses . '" target="_blank">'
                         . $text 
