--- a/themes/phoenix/templates/header.phtml
+++ b/themes/phoenix/templates/header.phtml
@@ -33,7 +33,8 @@
 <? if (!isset($this->layout()->renderingError)): ?>
   <div class="collapse navbar-collapse" id="header-collapse">
     <ul class="nav navbar-nav navbar-left" role="menu">
-      <? $currentUrl = $_SERVER['SCRIPT_URI'] . '?' . $_SERVER['QUERY_STRING'];?>
+      <? // This is throwing a warning on production. We might need to bring this back in a different way.  
+         //$currentUrl = $_SERVER['SCRIPT_URI'] . '?' . $_SERVER['QUERY_STRING'];?>
       <? if ($this->knowledgeTracker()->tabEnabled()): ?>
         <li><a id="knowledgeTrackerLink" class="modal-link" href="<?=$this->url('feedback-knowledgetracker') ?>"><i class="fa fa-envelope"></i> <?=$this->transEsc("Feedback")?></a></li>
       <? endif; ?>
