--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -5,6 +5,15 @@
     // Set up breadcrumbs:
     $this->layout()->breadcrumbs = '<li><a href="' . $this->url('myresearch-home') . '">' . $this->transEsc('Your Account') . '</a></li> <li class="active">' . $this->transEsc('Checked Out Items') . '</li>';
 ?>
+<? // Display a message if the form has been submitted ?>
+<? if ($_SERVER['REQUEST_METHOD'] === 'POST'): ?>
+    <div class="alert alert-warning" role="alert" style="margin-bottom:-6px;"> 
+        Your renewal request has been submitted. Please verify all of your items renewed successfully. 
+        If an item failed to renew, it might not be renewable and may need to be returned. Please talk
+        with a librarian or <a href="http://www.lib.uchicago.edu/e/using/borrow/">counsult our borrowing 
+        policies page</a> if you have any questions.
+    </div>
+<? endif; ?>
 
 <div class="row">
   <div class="<?=$this->layoutClass('mainbody')?>">
@@ -18,7 +27,7 @@
           <a href="http://www.lib.uchicago.edu/e/ask/contactcirc.html">online form</a> and Library staff will help you.
         </p>-->
 
-      <form name="renewals" action="" method="post" id="renewals">
+      <form name="renewals" action="<?=$this->url('myresearch-home')?>" method="post" id="renewals">
         <div class="toolbar">
           <input type="submit" class="btn btn-default" name="renewSelected" value="<?=$this->transEsc("renew_selected")?>" />
           <input type="submit" class="btn btn-default" name="renewAll" value="<?=$this->transEsc('renew_all')?>" />
@@ -56,6 +65,11 @@
             <?=$ilsDetails['renew']?>
           </td> 
           <td>
+            <? if (isset($this->renewResult[$ilsDetails['item_id']])): ?>
+                <? $renewalStatus = $this->renewResult[$ilsDetails['item_id']]['success']?>
+                <?=$renewalStatus == true ? '<strong class="text-success">Successfully renewed!</strong>' : 
+                    '<strong class="text-danger">Failed to renew!</strong>'?><br/>
+            <? endif; ?>
             <?
               // If this is a non-missing Solr record, we should display a link:
               if (is_a($resource, 'VuFind\\RecordDriver\\SolrDefault') && !is_a($resource, 'VuFind\\RecordDriver\\Missing')) {
