--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -7,12 +7,19 @@
 ?>
 <? // Display a message if the form has been submitted ?>
 <? if ($_SERVER['REQUEST_METHOD'] === 'POST'): ?>
-    <div class="alert alert-warning" role="alert" style="margin-bottom:-6px;"> 
-        Your renewal request has been submitted. Please verify all of your items renewed successfully. 
-        If an item failed to renew, it might not be renewable and may need to be returned. Please talk
-        with a librarian or <a href="http://www.lib.uchicago.edu/e/using/borrow/">counsult our borrowing 
-        policies page</a> if you have any questions.
-    </div>
+    <? 
+    $style = 'margin-bottom:-6px; font-size:15px;'; 
+    if ($this->failure) { 
+        $msg = 'Some of your items failed to renew!<br/>Please talk with a librarian or '  
+             . '<a href="http://www.lib.uchicago.edu/e/using/borrow/">counsult our '
+             . 'borrowing policies page</a> if you have any questions.';
+        echo $this->BootstrapAlert()->makeAlert('danger', $msg, $style);
+    }
+    else {
+        $msg= 'Success! All of your items successfully renewed! ';
+        echo $this->BootstrapAlert()->makeAlert('success', $msg, $style);
+    }
+    ?>
 <? endif; ?>
 
 <div class="row">
