--- a/themes/bootstrap3/templates/RecordTab/toc.phtml
+++ b/themes/bootstrap3/templates/RecordTab/toc.phtml
@@ -2,12 +2,13 @@
     // Set page title.
     $this->headTitle($this->translate('Table of Contents') . ': ' . $this->driver->getBreadcrumb());
 
-    $toc = $this->driver->getTOC();
+    //$toc = $this->driver->getTOC();
+    $toc = $this->tab->getContent();
 ?>
 <? if (!empty($toc)): ?>
   <strong><?=$this->transEsc('Table of Contents')?>: </strong>
   <ul class="toc">
-    <? foreach ($toc as $line): ?>
+    <? foreach ($toc['Syndetics'][0]['Content'] as $line): ?>
       <li><?=$this->escapeHtml($line)?></li>
     <? endforeach; ?>
   </ul>
