Bug # 17315. Added support for new renewals api.

--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -35,10 +35,10 @@
         </p>
 
       <form name="renewals" action="<?=$this->url('myresearch-home')?>" method="post" id="renewals">
-        <!--<div class="toolbar">
+        <div class="toolbar">
           <input type="submit" class="btn btn-default" name="renewSelected" value="<?=$this->transEsc("renew_selected")?>" />
           <input type="submit" class="btn btn-default" name="renewAll" value="<?=$this->transEsc('renew_all')?>" />
-        </div>-->
+        </div>
       <? endif; ?>
 
       <table class="table table-striped">
