Added methods for checking if a user is a member of a specific grouper group, added a service link for the alt text form.

--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -218,7 +218,8 @@
               <? endif; ?>
             <? endif; ?>
               <? /* Begin Items that are either Available or Unavailable */ ?>
-                <?=$this->ServiceLinks()->aeon($row)?> 
+                <?=$this->ServiceLinks()->aeon($row)?>
+                <?=$this->ServiceLinks()->altText($row)?>
           <? endif; ?>
           <? /* Embed item structured data: library, barcode, call number */ ?>
           <? if ($row['location']): ?>
