Added an alternative text request link for eholdings and made minor changes to the alternative text request methods to accomodate eholdings.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -854,6 +854,9 @@ tr[typeof="Offer"] th,
 .service {
     margin: 0 10px;
 }
+#e-links .service {
+    margin: 0;
+}
 .main .nav-pills,
 .bulkActionButtons {
     border-top:1px dashed @table-border-color;
